--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6 col-12">
+            <div class="col-md-6 col-12 mb-5 mb-md-0">
                 <div class="portfolio-box" data-toggle="modal" data-target="#vexModal">
                     <img class="img-fluid rounded mx-auto" src="img/portfolio/thumbnails/1.jpg" alt="">
                     <div class="portfolio-box-caption">
@@ -178,11 +178,14 @@
                                 Team High Voltage
                                 <small class="text-monospace">4911A</small>
                             </div>
+                            <div class="d-inline-block d-md-none">
+                                <a href="#">Learn More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-12">
+            <div class="col-md-6 col-12 ">
                 <div class="portfolio-box" data-toggle="modal" data-target="#frcModal">
                     <img class="img-fluid rounded mx-auto" src="img/portfolio/thumbnails/2.jpg" alt="" >
                     <div class="portfolio-box-caption">
@@ -193,6 +196,9 @@
                             <div class="project-name">
                                 Team Ground Zero
                                 <small class="text-monospace">4409</small>
+                            </div>
+                            <div class="d-inline-block d-md-none">
+                                <a href="#">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -205,17 +211,17 @@
             <div class="col-md-4">
                 <img src="./img/icons/RoverRuckus.png" width="60%" class="my-auto p-2 sr-icon-1">
                 <h5>FIRST Tech Challenge</h5>
-                <small><a href="https://www.firstinspires.org/robotics/ftc">Learn More</a></small>
+                <a href="https://www.firstinspires.org/robotics/ftc">Learn More</a>
             </div>
             <div class="col-md-4">
                 <img src="./img/icons/IntoOrbit.png" width="60%" class="my-auto p-2 sr-icon-2">
                 <h5>FIRST LEGO League</h5>
-                <small><a href="https://www.firstinspires.org/robotics/fll">Learn More</a></small>
+                <a href="https://www.firstinspires.org/robotics/fll">Learn More</a>
             </div>
             <div class="col-md-4">
                 <img src="./img/icons/MissionMoon.png" width="60%" class="my-auto p-2 sr-icon-3">
                 <h5>FIRST LEGO League Jr.</h5>
-                <small><a href="https://www.firstinspires.org/robotics/flljr">Learn More</a></small>
+                <a href="https://www.firstinspires.org/robotics/flljr">Learn More</a>
             </div>
         </div>
     </div>
@@ -254,13 +260,13 @@
         <h5>© Michiana Yourth Robotics 2018. All Rights Reserved.</h5>
         <ul class="list-inline ">
             <li class="list-inline-item">
-                <a href="https://www.instagram.com/myre2017/" class="h3"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/myre2017/" class="h3"><i class="fab fa-instagram sr-icon-1"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="https://www.facebook.com/MichianaYouthRoboticsandEngineering/" class="h3"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/MichianaYouthRoboticsandEngineering/" class="h3"><i class="fab fa-facebook-square sr-icon-2"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="https://github.com/michianayouthrobotics" class="h3"><i class="fab fa-github"></i></a>
+                <a href="#" class="h3"><i class="fab fa-github sr-icon-3"></i></a>
             </li>
         </ul>
     </div>
