fixing footer links again

--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
         <h5>© Michiana Yourth Robotics 2018. All Rights Reserved.</h5>
         <ul class="list-inline ">
             <li class="list-inline-item">
-                <a href="https://www.instagram.com/myre2017/" class="h3"><i class="fab fa-instagram sr-icon-1"></i></a>
+                <a href="https://www.instagram.com/myre2017/" class="h3"><i class="fab fa-instagram"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="https://www.facebook.com/MichianaYouthRoboticsandEngineering/" class="h3"><i class="fab fa-facebook-square sr-icon-2"></i></a>
+                <a href="https://www.facebook.com/MichianaYouthRoboticsandEngineering/" class="h3"><i class="fab fa-facebook-square"></i></a>
             </li>
             <li class="list-inline-item">
-                <a href="#" class="h3"><i class="fab fa-github sr-icon-3"></i></a>
+                <a href="https://github.com/michianayouthrobotics" class="h3"><i class="fab fa-github"></i></a>
             </li>
         </ul>
     </div>
