added sponsor section

--- a/index.html
+++ b/index.html
@@ -230,6 +230,41 @@
 <section id="contact" class="bg-light">
     <div class="container">
         <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+              <h2 class="section-heading">Thank you sponsors!</h2>
+              <hr class="my-4">
+              <p class="mb-5">
+                  We couldn't do this without your support
+              </p>
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-12 mx-auto text-center">
+              <img src="./img/chassix.svg" height="60px" class="m-3">
+              <img src="./img/AEP.svg" height="60px" class="m-3">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <ul style="list-style: none;">
+                  <li>Brandywine Community Schools</li>
+                  <li>Cambden Appliance</li>
+                  <li>C.N.C. Products</li>
+                  <li>Kalamazoo Sportswear</li>
+                  <li>Low Associates</li>
+                  <li>Michigan Department of Education</li>
+                  <li>Peace of Mind Counseling</li>
+                  <li>Rock N' Roll Woods</li>
+                  <li>Solid Works</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="contact" class="bg-light">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-8 mx-auto text-center">
                 <h2 class="section-heading">Get Involved!</h2>
                 <hr class="my-4">
