--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <h2 class="section-heading">Get Involved!</h2>
                 <hr class="my-4">
                 <p class="mb-5">
-                    Contact Meg Edwards to participate in classes, clubs or competitions. Our organization is always looking for experienced volunteers, and donations!
+                    Contact Cheryl Heiser to participate in classes, clubs or competitions. Our organization is always looking for experienced volunteers, and donations!
                 </p>
             </div>
         </div>
@@ -277,13 +277,13 @@
             <div class="col-lg-4 ml-auto text-center">
                 <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
                 <p>
-                    <a href="tel:269-591-2231">269-591-2231</a>
+                    <a href="tel:269-519-8411">269-519-8411</a>
                 </p>
             </div>
             <div class="col-lg-4 mr-auto text-center">
                 <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
                 <p>
-                    <a href="mailto:meg@michianayouthrobotics.org">meg@michianayouthrobotics.org</a>
+                    <a href="mailto:heisercheryl@gmail.com">HeiserCheryl@gmail.com</a>
                 </p>
             </div>
         </div>
